[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/GUI elements/character_sheet/CharacterSheet.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/munro.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/themes/ToolTipTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.890196, 0.894118, 0.894118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="CharacterSheet" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -186.0
margin_right = 418.0
margin_bottom = 186.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 418.0
margin_bottom = 372.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 226.0
margin_bottom = 332.0

[node name="Class" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 24.0
alignment = 1

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Class"]
margin_left = 96.0
margin_right = 130.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="PrimaryAbility" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 226.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PrimaryAbility"]
margin_right = 132.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Primary ability: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PrimaryAbility"]
margin_left = 136.0
margin_right = 170.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="SecondaryAbility" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 226.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SecondaryAbility"]
margin_right = 150.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Secondary ability: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SecondaryAbility"]
margin_left = 154.0
margin_right = 188.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="Value2" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SecondaryAbility"]
margin_left = 192.0
margin_right = 226.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="PassiveAbility" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 226.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PassiveAbility"]
margin_right = 128.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Passive ability: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PassiveAbility"]
margin_left = 132.0
margin_right = 166.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="Health" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 226.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Health"]
margin_right = 62.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Health: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Health"]
margin_left = 66.0
margin_right = 139.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "100 / 100"

[node name="Damage" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 226.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Damage"]
margin_right = 76.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Damage: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Damage"]
margin_left = 80.0
margin_right = 108.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0-0"

[node name="AttackSpeed" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 226.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/AttackSpeed"]
margin_right = 118.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Attack speed: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/AttackSpeed"]
margin_left = 122.0
margin_right = 209.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0 / second"

[node name="MovementSpeed" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 226.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/MovementSpeed"]
margin_right = 152.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Movement speed: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/MovementSpeed"]
margin_left = 156.0
margin_right = 166.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Defence" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 226.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Defence"]
margin_right = 74.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Defence: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Defence"]
margin_left = 78.0
margin_right = 88.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CriticalChance" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 226.0
margin_bottom = 276.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CriticalChance"]
margin_right = 154.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Critical Hit Chance: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CriticalChance"]
margin_left = 158.0
margin_right = 168.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CriticalDamage" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 226.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CriticalDamage"]
margin_right = 164.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Critical Hit Damage: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/CriticalDamage"]
margin_left = 168.0
margin_right = 178.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Lifesteal" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 226.0
margin_bottom = 332.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Lifesteal"]
margin_right = 78.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Lifesteal: "

[node name="Value" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Lifesteal"]
margin_left = 82.0
margin_right = 92.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "0"
